--- a/index.html
+++ b/index.html
@@ -131,6 +131,11 @@
             margin-right: 5px; /* Espacio entre el icono y el texto */
         }
 
+        .copyrigh-item a {
+        color: white;           /* Color blanco para el texto del enlace */
+        text-decoration: none;  /* Sin subrayado en el enlace */
+        }
+
         #feature_title {
             flex: 1;
             font-size: 50px;
@@ -142,11 +147,6 @@
         .image-link img {
             width: 30px;
             height: 30px;
-        }
-
-        .copyrigh-item a {
-        color: white;           /* Color blanco para el texto del enlace */
-        text-decoration: none;  /* Sin subrayado en el enlace */
         }
 
         /* Estilo para el div con la clase "formulario" */
@@ -252,7 +252,7 @@
     </header>
 <body>  
     <div id="main">
-        <div id="main-content">
+        <div id="main-content" class="info">
             <h1>¡TODO DESDE UN MISMO LUGAR!</h1>
             <h2>Somos la guía digital más completa en República Dominicana para conocer emocionantes y auténticas experiencias en nuestro hermoso país.</h2>
             <br>
