--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             text-decoration: none;
             border-radius: 25px; /* Radio para hacer el botón redondeado */
             color: #fff; /* Color del texto */
-            background-color: #ff6600; /* Color naranja */
+            background-color: #FD7D2C; /* Color naranja */
             cursor: pointer;
             transition: background-color 0.3s;
             border: none; /* Elimina el borde */
