--- a/index.html
+++ b/index.html
@@ -232,9 +232,9 @@
         }
 
         #main-content h1 {
-            font-size: 38px; /* Tamaño de fuente más grande */
-            font-weight: bold; /* Texto en negrita */
-            margin-bottom: 20px;
+            font-size: 42px; /* Aumenta el tamaño de la fuente */
+            margin-top: 40px; /* Baja más el título */
+            line-height: 1.2; /* Controla el espacio entre líneas */
         }
 
         #main-content h2 {
