--- a/index.html
+++ b/index.html
@@ -218,9 +218,9 @@
         }
 
         .header-icons a {
-        font-size: 24px; /* Aumenta el tamaño de los iconos */
-        margin-left: 10px;
-        margin-bottom: 5px; /* Agrega espacio entre los iconos */
+            font-size: 24px; /* Aumenta el tamaño de los iconos */
+            margin-left: 10px;
+            margin-bottom: 5px; /* Agrega espacio entre los iconos */
         }
 
         #header-contact {
@@ -238,13 +238,10 @@
         }
 
         #main-content h2 {
-            font-size: 35px;
-            width: 35%;
-            margin: 0 auto;
-            text-align: center; /* Alinear el texto al centro */
-            line-height: 1.6; /* Ajustar la altura de línea para controlar el espacio entre líneas */
+            font-size: 20px; /* Reducir el tamaño de la fuente */
+            text-align: left; /* Alinear a la izquierda */
         }
-
+        /* Ajustar la altura de línea para controlar el espacio entre líneas line-height: 1.6;  */
 
         a:hover {
             transform: scale(1.2); /* Ajusta el tamaño al 120% */
