--- a/index.html
+++ b/index.html
@@ -232,14 +232,17 @@
         }
 
         #main-content h1 {
-            font-size: 42px; /* Aumenta el tamaño de la fuente */
-            margin-top: 40px; /* Baja más el título */
+            font-size: 50px; /* Aumenta el tamaño de la fuente */
+            margin-top: 30px; /* Baja más el título */
             line-height: 1.2; /* Controla el espacio entre líneas */
+            text-align: left;
+            margin-left: 10px;
         }
 
         #main-content h2 {
-            font-size: 20px; /* Reducir el tamaño de la fuente */
+            font-size: 30px; /* Reducir el tamaño de la fuente */
             text-align: left; /* Alinear a la izquierda */
+            margin-left: 10px;
         }
         /* Ajustar la altura de línea para controlar el espacio entre líneas line-height: 1.6;  */
 
