--- a/index.html
+++ b/index.html
@@ -240,12 +240,17 @@
         }
 
         #main-content h2 {
-            font-size: 30px; /* Reducir el tamaño de la fuente */
+            font-size: 25px; /* Reducir el tamaño de la fuente */
             text-align: left; /* Alinear a la izquierda */
             margin-left: 10px;
+            line-height: 1.5;
         }
         /* Ajustar la altura de línea para controlar el espacio entre líneas line-height: 1.6;  */
-
+        #main-content button {
+            text-align: left; /* Alinear a la izquierda */
+            margin-left: 5px; /* Agregar margen izquierdo */
+        }
+        
         a:hover {
             transform: scale(1.2); /* Ajusta el tamaño al 120% */
             transition: transform 0.3s ease; /* Animación suave */
