--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
             line-height: 1.6;
         }
 
+        #main-content h3 {
+            display: none; /* Oculta el párrafo "Contáctanos" */
+        }
+
         #main-content button {
             display: inline-block;
             padding: 10px 20px;
@@ -240,6 +244,10 @@
         }
 
         #main-content h2 {
+            display: none; /* Oculta el párrafo "Contáctanos" */
+        }
+
+        #main-content h3 {
             font-size: 25px; /* Reducir el tamaño de la fuente */
             text-align: left; /* Alinear a la izquierda */
             margin-left: 10px;
@@ -307,6 +315,7 @@
             <h2>Somos la guía digital más completa en</h2>
             <h2>República Dominicana para conocer emocionantes</h2>
             <h2>y auténticas experiencias en nuestro hermoso país.</h2>
+            <h3>Somos la guía digital más completa en República Dominicana para conocer emocionantes y auténticas experiencias en nuestro hermoso país.</h3>
             <br>
             <button><a href="#" class="scroll-to-form">Descubre más</a></button>
         </div>
