--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         }
 
         #main-content h1 {
-            font-size: 55px; /* Aumenta el tamaño de la fuente */
+            font-size: 50px; /* Aumenta el tamaño de la fuente */
             margin-top: 20px; /* Baja más el título */
             line-height: 1.2; /* Controla el espacio entre líneas */
             text-align: left;
@@ -240,7 +240,13 @@
         }
 
         #main-content h2 {
-            font-size: 23px; /* Reducir el tamaño de la fuente */
+            font-size: 25px; /* Reducir el tamaño de la fuente */
+            text-align: left; /* Alinear a la izquierda */
+            margin-left: 10px;
+            line-height: 1;
+        }
+
+        #main-content h3 {
             text-align: left; /* Alinear a la izquierda */
             margin-left: 10px;
             line-height: 1;
@@ -303,6 +309,7 @@
             <h2>Somos la guía digital más completa en</h2>
             <h2>República Dominicana para conocer emocionantes</h2>
             <h2>y auténticas experiencias en nuestro hermoso país.</h2>
+            <h3>Somos la guía digital más completa en República Dominicana para conocer emocionantes y auténticas experiencias en nuestro hermoso país.</p>
             <br>
             <button><a href="#" class="scroll-to-form">Descubre más</a></button>
         </div>
