--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
         #main-content h1 {
             font-size: 50px; /* Aumenta el tamaño de la fuente */
-            margin-top: 20px; /* Baja más el título */
+            margin-top: 15px; /* Baja más el título */
             line-height: 1.2; /* Controla el espacio entre líneas */
             text-align: left;
             margin-left: 10px;
@@ -255,6 +255,7 @@
             text-align: left; /* Alinear a la izquierda */
             margin-left: 10px;
             line-height: 1;
+            margin-bottom: 5px;          
         }
         /* Ajustar la altura de línea para controlar el espacio entre líneas line-height: 1.6;  */
 
