--- a/index.html
+++ b/index.html
@@ -254,8 +254,13 @@
             font-size: 25px; /* Reducir el tamaño de la fuente */
             text-align: left; /* Alinear a la izquierda */
             margin-left: 10px;
-            line-height: 1;
-            margin-bottom: 5px;          
+            line-height: 1.2;     
+        }
+
+        #main-content button {
+            text-align: left; /* Cambia la alineación del texto a la izquierda */
+            margin-left: 10px; /* Ajusta el margen izquierdo para separar del borde */
+            margin-top: 10px; /* Ajusta el margen superior para separar de otros elementos */
         }
         /* Ajustar la altura de línea para controlar el espacio entre líneas line-height: 1.6;  */
 
