--- a/index.html
+++ b/index.html
@@ -275,11 +275,14 @@
             margin-bottom: 5px; /* Agrega margen inferior entre los íconos */
         }
 
-        .feature-form {
-            flex: 1;
-            padding: 0 40px; /* Reducir el padding */
-            background-color: white;
-            margin-left: -20px; /* Ajustar el margen izquierdo */
+        #features {
+            flex-direction: column; /* Cambia la dirección del flexbox a columna */
+        }
+
+        #features-div {
+            order: -1; /* Cambia el orden del elemento, colocándolo primero */
+            max-width: 100%; /* Asegura que ocupe todo el ancho del contenedor */
+            margin: 0 20px; /* Agrega un margen para separarlo de los bordes */
         }
 
         #feature_title {
