--- a/index.html
+++ b/index.html
@@ -279,10 +279,10 @@
             flex-direction: column; /* Cambia la dirección del flexbox a columna */
         }
 
-        #features-div {
-            order: -1; /* Cambia el orden del elemento, colocándolo primero */
-            max-width: 100%; /* Asegura que ocupe todo el ancho del contenedor */
-            margin: 0 20px; /* Agrega un margen para separarlo de los bordes */
+        #features-div,
+        #features-form {
+            max-width: 80%; /* Establece un ancho máximo para los elementos */
+            margin: 10px 0; /* Añade un margen para separar los elementos */
         }
 
         #feature_title {
