--- a/index.html
+++ b/index.html
@@ -272,10 +272,9 @@
             flex-direction: column; /* Cambia la dirección del flexbox a columna */
         }
 
-        #features-div,
-        #features-form {
-            max-width: 80%; /* Establece un ancho máximo para los elementos */
-            margin: 10px 0; /* Añade un margen para separar los elementos */
+        #features-div{
+            text-align: left; /* Establece un ancho máximo para los elementos */
+            margin-left: 10px; /* Añade un margen para separar los elementos */
         }
 
         #feature_title {
