--- a/index.html
+++ b/index.html
@@ -449,7 +449,10 @@
 
     <div id="copyrigh">
         <div class="copyrigh-item paLaIzquierda">
-            <p style="color: #fff;">&copy; 2024 &bull; ©Descubre DO &bull; Todos los derechos reservados</p>
+            <p style="color: #fff;">&copy; 2024 &bull; ©Descubre DO</p>
+        </div>
+        <div class="copyrigh-item paLaIzquierda">
+            <p style="color: #fff;">&bull; Todos los derechos reservados</p>
         </div>
         <div class="copyrigh-item paLaDerecha">
             <i class="fa-brands fa-tiktok" style="color: #fff;"></i> <a href="https://www.tiktok.com/@descubre.do" target="_blank"></a>
