--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
         });
   
         //target elements, and specify options to create reveal animations
-        //ScrollReveal().reveal('.main-title, .box', { delay: 500, origin: 'bottom' });
+        ScrollReveal().reveal('.main-title, .box', { delay: 500, origin: 'bottom' });
         ScrollReveal().reveal('.main-parragraph', { delay: 500, origin: 'top' });
         ScrollReveal().reveal('.paLaDerecha', { delay: 500, origin: 'right' });
         ScrollReveal().reveal('.paLaIzquierda', { delay: 500, origin: 'left' });
