--- a/index.html
+++ b/index.html
@@ -272,8 +272,10 @@
             flex-direction: column; /* Cambia la dirección del flexbox a columna */
         }
 
-        #features-div{
-            text-align: left; /* Establece un ancho máximo para los elementos */
+        #features-div {
+            max-width: 100%; /* Establece el ancho máximo al 100% */
+            margin: 5px 0; /* Ajusta el margen superior e inferior y elimina los laterales */
+            text-align: left; /* Alinea el texto a la izquierda */
         }
 
         #feature_title {
