--- a/index.html
+++ b/index.html
@@ -278,6 +278,10 @@
             text-align: left; /* Alinea el texto a la izquierda */
         }
 
+        #features-form {
+            max-width: 100%;
+        }
+
         #feature_title {
             font-size: 35px; /* Ajusta el tamaño en pantallas más pequeñas */
         }
