--- a/index.html
+++ b/index.html
@@ -455,6 +455,9 @@
 
     <div id="copyrigh">
         <div class="copyrigh-item paLaIzquierda">
+            <a href="https://www.tiktok.com/@descubre.do" target="_blank">Terminos y Condiciones</a>
+        </div>
+        <div class="copyrigh-item paLaIzquierda">
             <p style="color: #fff;">&copy; 2024 &bull; ©Descubre DO</p>
         </div>
         <div class="copyrigh-item paLaIzquierda">
