--- a/index.html
+++ b/index.html
@@ -473,10 +473,10 @@
             <p style="color: #fff;">Todos los derechos reservados</p>
         </div>
         <div class="copyrigh-item paLaDerecha">
-            <i class="fa-brands fa-tiktok" style="color: #fff;"></i> <a href="https://www.tiktok.com/@descubre.do" target="_blank"></a>
+            <i class="fa-brands fa-tiktok" style="color: #fff;"></i> <a href="https://www.tiktok.com/@descubre.do" target="_blank">TikTok</a>
         </div>
         <div class="copyrigh-item paLaDerecha">
-            <i class="fa-brands fa-instagram"></i> <a href="https://www.instagram.com/descubre.do/" target="_blank"></a>
+            <i class="fa-brands fa-instagram"></i> <a href="https://www.instagram.com/descubre.do/" target="_blank">Instagram</a>
         </div>
         <div class="copyrigh-item paLaDerecha">
             <i class="far fa-envelope"></i> <span>hola@descubre.do</span>
