--- a/index.html
+++ b/index.html
@@ -237,14 +237,14 @@
         }
 
         #main-content {
-            align-items: flex-start; /* Alinea el contenido a la izquierda en pantallas pequeñas */
+            align-items: center; /* Alinea el contenido a la izquierda en pantallas pequeñas */
         }
 
         #main-content h1 {
-            font-size: 50px; /* Aumenta el tamaño de la fuente */
+            font-size: 40px; /* Aumenta el tamaño de la fuente */
             margin-top: 15px; /* Baja más el título */
             line-height: 1.2; /* Controla el espacio entre líneas */
-            text-align: left;
+            text-align: center;
             margin-left: 10px;
         }
 
@@ -254,13 +254,13 @@
 
         #main-content h3 {
             font-size: 25px; /* Reducir el tamaño de la fuente */
-            text-align: left; /* Alinear a la izquierda */
+            text-align: center; /* Alinear a la izquierda */
             margin-left: 10px;
             line-height: 1.2;     
         }
 
         #main-content button {
-            text-align: left; /* Cambia la alineación del texto a la izquierda */
+            text-align: center; /* Cambia la alineación del texto a la izquierda */
             margin-left: 10px; /* Ajusta el margen izquierdo para separar del borde */
             margin-top: 10px; /* Ajusta el margen superior para separar de otros elementos */
         }
