--- a/index.html
+++ b/index.html
@@ -385,9 +385,9 @@
 
     <div id="features">
         <div id="features-div">
-            <h3 id="feature_title" class="main-title">¡Regístrate y se parte de nuestra comunidad!</h3>
+            <h3 id="feature_title" class="main-title">¡Regístrate y sé parte de nuestra comunidad!</h3>
             <br>
-            <p class="main-parragraph">Queremos que estes presente siempre al tanto de Descubre.</p>
+            <p class="main-parragraph">Queremos que estés presente siempre al tanto de Descubre.</p>
             <p class="main-parragraph">Comunicamos de manera dinámica las últimas noticias sobre eventos y actividades para disfrutar en todo el país, con opciones gratuitas y especiales, para todos los gustos.</p>
         </div>
             <!-- Aquí puedes agregar los campos del formulario -->
