--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         #features-div {
             max-width: 100%; /* Establece el ancho máximo al 100% */
             margin: 5px 0; /* Ajusta el margen superior e inferior y elimina los laterales */
-            text-align: left; /* Alinea el texto a la izquierda */
+            text-align: center; /* Alinea el texto a la izquierda */
         }
 
         #features-form {
