--- a/index.html
+++ b/index.html
@@ -303,6 +303,20 @@
         #copyrigh .copyrigh-item {
             margin-top: 5px;
         }
+
+        .box:hover .box-image{
+            transform: none;
+            transition: none;
+        }
+        
+        .box:hover .box-title{
+            transform: none;
+            transition: none;
+        }
+        .box:hover .description {
+            transform: none;
+            transition: none;
+        }
     }
     </style>
 </head>
